<resources>
    <string name="app_name">요기죠기</string>

    <!-- Bottom Navigation View -->
    <string name="bnv_home">홈</string>
    <string name="bnv_myreview">내 리뷰</string>
    <string name="bnv_mymap">내 지도</string>
    <string name="bnv_setting">설정</string>

    <!-- Common -->
    <string name="next">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="register">등록</string>
    <string name="location_permission_title">위치권한 요청</string>
    <string name="location_permission_message">현재 위치정보를 얻기 위해 위치 권한이 필요합니다.</string>
    <string name="location_permission_denied">위치권한 요청이 거절되었습니다.</string>

    <!-- Login -->
    <string name="login_app_description">나만의 입맛대로 맛집을 찾고 싶다면!</string>
    <string name="login_with_phone">전화번호로 로그인하기</string>
    <string name="login_with_kakao">카카오로 시작하기</string>
    <string name="login_with_naver">네이버로 시작하기</string>
    <string name="login">로그인</string>
    <string name="login_phonenumber">전화번호</string>
    <string name="login_password">비밀번호</string>
    <string name="login_phonenumber_hint">- 제외 전화번호 입력</string>
    <string name="login_password_hint">비밀번호를 입력해주세요</string>
    <string name="login_find_password">비밀번호를 잊어버리셨나요?</string>
    <string name="login_save">로그인정보 저장하기</string>
    <string name="login_do">로그인 하기</string>
    <string name="signup">회원가입</string>
    <string name="login_complete">로그인 완료!</string>
    <string name="login_empty">전화번호 혹은 비밀번호를 확인해주세요</string>

    <!-- SignUp -->
    <string name="signup_verify_text">본인인증</string>
    <string name="signup_phone_text1">60초면 가입완료!</string>
    <string name="signup_phone_text2">본인인증을 위해</string>
    <string name="signup_phone_text3">전화번호를 입력</string>
    <string name="signup_phone_text4">해주세요</string>
    <string name="signup_Phone_ex">ex) 01012345678</string>
    <string name="signup_request_verify">인증요청</string>
    <string name="signup_verify_text1">보내드린 인증번호 6자리를</string>
    <string name="signup_verify_text2">입력해 주세요.</string>
    <string name="verify_text">인증번호</string>
    <string name="signup_code_not_receive">인증번호가 오지 않는다면?</string>
    <string name="signup_code_resend">재발송</string>
    <string name="verify_with_other_phone">다른 휴대폰 번호로 인증하기</string>
    <string name="signup_complete">회원가입 완료!</string>
    <string name="signup_agree">약관동의</string>
    <string name="signup_agree_text">요기죠기 이용을 위해\n아래의 약관 동의 및 회원가입이 필요해요</string>
    <string name="signup_agree_all">전체동의</string>
    <string name="signup_agree_personal">(필수) 개인정보수집및이용 동의</string>
    <string name="signup_agree_location">(필수) 사용자위치정보이용 동의</string>
    <string name="signup_agree_marketing">(선택) 광고성정보수신 동의</string>
    <string name="signup_password_text1">사용하실 비밀번호</string>
    <string name="signup_password_text2">를 입력해주세요</string>
    <string name="signup_password_helper">조건: 알파벳 7자 이상, 특수문자 포함</string>
    <string name="signup_password_check_text1">한번 더&#160;</string>
    <string name="signup_password_check_text2">를 입력해주세요</string>

    <!-- SignUp Error -->
    <string name="signup_error_default">전화번호 형식이 맞지 않습니다.</string>
    <string name="signup_error_button">전화번호를 확인해주세요.</string>
    <string name="signup_error_code">인증번호를 확인해주세요.</string>
    <string name="signup_error_password">비밀번호를 확인해주세요</string>
    <string name="signup_error_password_check">비밀번호가 동일하지 않습니다.</string>
    <string name="signup_error_agree">필수 동의 사항을 모두 체크해주세요.</string>

    <!-- Profile -->
    <string name="profile_nickname">환영합니다!\n사용하실 닉네임을 알려주세요</string>
    <string name="profile_intro">자신을 표현하는\n한줄소개를 작성해주세요</string>
    <string name="profile_taste1">님,</string>
    <string name="profile_taste2">어떤 입맛인지 알려주세요</string>
    <string name="taste_hot">매운 맛</string>
    <string name="taste_sweet">단 맛</string>
    <string name="taste_salty">짠 맛</string>
    <string name="profile_prefer">어떤 맛을 선호하시나요?</string>
    <string name="taste_like">선호하는 정도 0~5</string>
    <string name="taste_well">잘 먹는 정도 0~5</string>
    <string name="nickname_exist">이미 존재하는 닉네임입니다.</string>
    <string name="nickname_not_exist">사용가능한 닉네임입니다.</string>
    <string name="nickname_empty">닉네임을 입력해주세요.</string>
    <string name="profile_create">프로필이 등록되었습니다.</string>
    <string name="taste_create">입맛이 등록되었습니다.</string>

    <!-- Main -->
    <string name="main_search_hint">검색) ex.성수, 건대, 홍대 등..</string>
    <string name="main_search_text">모임장소는 어디인가요??</string>
    <string name="main_search_my_location">내 위치 주변 검색</string>
    <string name="main_mood_title">#요기무드</string>
    <string name="main_mood_subtitle">무드별 맛집 추천!</string>

    <string name="mood_solo">혼자</string>
    <string name="mood_with_lover">애인과 함께</string>
    <string name="mood_with_friends">친구들과 함께</string>
    <string name="mood_with_parent">부모님과 함께</string>
    <string name="mood_with_child">자녀와 함께</string>
    <string name="mood_with_colleague">동료와 함께</string>
    <string name="mood_light_meal">가벼운 식사</string>
    <string name="mood_gourmet_meal">고급 식사</string>
    <string name="mood_pairing_meal">매칭된 식사</string>
    <string name="mood_business_meeting">업무 회의</string>
    <string name="mood_group_meeting">그룹 회의</string>
    <string name="mood_anniversary">기념일</string>

    <string name="place">성수</string>
    <string name="feed_title">에서 데이트</string>
    <string name="feed_filter_kor">한식</string>
    <string name="feed_filter_chn">중식</string>
    <string name="feed_filter_jpn">일식</string>
    <string name="feed_filter_wes">양식</string>
    <string name="feed_filter_night">야식</string>

    <!-- Main_Review -->
    <string name="main_review_title_name">OO식당</string>
    <string name="main_review_title">의 리뷰</string>
    <string name="main_review_info">식당 정보 보기</string>
    <string name="main_review_filter">필터</string>
    <string name="main_review_well">2</string>
    <string name="main_review_view">/</string>
    <string name="main_review_prefer">4</string>
    <string name="main_review_user_text">님의 리뷰</string>
    <string name="main_review_long_text">매우 긴 리뷰 텍스트 입니다.헤헤 매우 긴 리뷰 텍스트 입니다.하 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. 매우 긴 리뷰 텍스트 입니다. </string>
    <string name="read_more">…더보기</string>

    <!-- Main Info -->
    <string name="info_title_loc">건대입구</string>
    <string name="info_title_type">덮밥 전문점</string>
    <string name="info_address">서울 광진구 능동로 127 2층</string>
    <string name="info_time">11:00 ~ 21:00</string>
    <string name="info_open">영업중</string>
    <string name="info_number">(0507)–2214–5678</string>
    <string name="info_menu_text">메뉴</string>
    <string name="menu_name">큐브 스테이크 덮밥</string>
    <string name="menu_price">12,000원</string>
    <string name="store_location_check">매장 위치 보기</string>

    <!-- MyReview -->
    <string name="myreview_nickname_text">님</string>
    <string name="myreview_follower_text">팔로워</string>
    <string name="myreview_following_text">팔로잉</string>
    <string name="myreview_follower_num">28</string>
    <string name="myreview_following_num">19</string>

    <!-- MapFragment -->
    <string name="map_with_no_userdata">올바르지 못한 접근입니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>