<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.shop.yogizogi_android.ui.view.auth.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.auth.signup.process.PasswordCheckFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/signup_password_check_text1"
            android:textColor="@color/main_background"
            android:textSize="20sp"
            app:fontFamily="@font/nanumsquareneo_variable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/main_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/nanumsquareneo_variable"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_text_1"
            app:layout_constraintStart_toEndOf="@id/tv_text_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_password_check_text2"
            android:textColor="@color/main_background"
            android:textSize="20sp"
            app:fontFamily="@font/nanumsquareneo_variable"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_text_1"
            app:layout_constraintStart_toEndOf="@id/tv_text_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="47dp"
            android:hint="@string/login_password_hint"
            app:endIconMode="password_toggle"
            app:helperText="@string/signup_password_helper"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_et_password_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"
                app:text="@{viewModel.passwordCheck}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_complete"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/main_yellow"
            android:gravity="center"
            android:text="@string/signup_complete"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/nanumsquareneo_variable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>