<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.main.myreview.ReviewFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/bnv_myreview"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_user_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_default" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_img"
            app:layout_constraintStart_toEndOf="@id/iv_user_img"
            app:layout_constraintTop_toTopOf="@id/iv_user_img" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/myreview_nickname_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_img"
            app:layout_constraintStart_toEndOf="@id/tv_user_nickname"
            app:layout_constraintTop_toTopOf="@id/iv_user_img" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/myreview_following_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_follower_text"
            app:layout_constraintTop_toTopOf="@id/iv_user_img" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_following_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/myreview_following_num"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_following_text"
            app:layout_constraintStart_toStartOf="@id/tv_following_text"
            app:layout_constraintTop_toBottomOf="@id/tv_following_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_follower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/myreview_follower_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_user_img" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_follower_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/myreview_follower_num"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_follower_text"
            app:layout_constraintStart_toStartOf="@id/tv_follower_text"
            app:layout_constraintTop_toBottomOf="@id/tv_follower_text" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/iv_user_img" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_review"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:spanCount="3"
            tools:listitem="@layout/item_myreview" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>