<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.main.home.HomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:text="@string/main_search_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@id/til_search"
            app:layout_constraintEnd_toEndOf="@id/til_search"
            app:layout_constraintStart_toStartOf="@id/til_search" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/main_search_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareneo_variable"
                android:imeOptions="actionSearch" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/til_search"
            app:layout_constraintEnd_toEndOf="@id/til_search"
            app:layout_constraintTop_toTopOf="@id/til_search"
            app:srcCompat="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquareneo_variable"
            android:padding="12dp"
            android:text="@string/main_search_my_location"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/til_search"
            app:layout_constraintStart_toStartOf="@id/til_search"
            app:layout_constraintTop_toBottomOf="@id/til_search" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>